--- a/SwagLabs/test-output/emailable-report.html
+++ b/SwagLabs/test-output/emailable-report.html
@@ -9,15 +9,19 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">50,717</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">168,052</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testcases.Scenarios</td><td><a href="#m0">purposelyFailLoginFlow</a></td><td rowspan="1">1712889298343</td><td rowspan="1">517</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testcases.Scenarios</td><td><a href="#m1">loginFlow</a></td><td rowspan="1">1712889275947</td><td rowspan="1">264</td></tr><tr class="passedeven"><td><a href="#m2">productListingVerification</a></td><td rowspan="1">1712889288957</td><td rowspan="1">201</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testcases.Scenarios</td><td><a href="#m0">purposelyFailLoginFlow</a></td><td rowspan="1">1712899308291</td><td rowspan="1">987</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">testcases.Scenarios</td><td><a href="#m1">addingToCart</a></td><td rowspan="1">1712899268355</td><td rowspan="1">179</td></tr><tr class="passedeven"><td><a href="#m2">additional_Case</a></td><td rowspan="1">1712899293185</td><td rowspan="1">997</td></tr><tr class="passedeven"><td><a href="#m3">checkOut</a></td><td rowspan="1">1712899280589</td><td rowspan="1">1560</td></tr><tr class="passedeven"><td><a href="#m4">loginFlow</a></td><td rowspan="1">1712899158809</td><td rowspan="1">114</td></tr><tr class="passedeven"><td><a href="#m5">productListingVerification</a></td><td rowspan="1">1712899190953</td><td rowspan="1">20099</td></tr><tr class="passedeven"><td><a href="#m6">sortingCheck</a></td><td rowspan="1">1712899241817</td><td rowspan="1">1817</td></tr></tbody>
 </table>
 <h2>Test</h2><h3 id="m0">testcases.Scenarios#purposelyFailLoginFlow</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Swag Labs text is not matching expected [true] but found [false]
-	at testcases.Scenarios.purposelyFailLoginFlow(Scenarios.java:198)
+	at testcases.Scenarios.purposelyFailLoginFlow(Scenarios.java:201)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
 ... Removed 28 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testcases.Scenarios#loginFlow</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">testcases.Scenarios#productListingVerification</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testcases.Scenarios#addingToCart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testcases.Scenarios#additional_Case</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">testcases.Scenarios#checkOut</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">testcases.Scenarios#loginFlow</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">testcases.Scenarios#productListingVerification</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">testcases.Scenarios#sortingCheck</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
